--- a/src/scss/core/_variables.scss
+++ b/src/scss/core/_variables.scss
@@ -1,6 +1,7 @@
 /* ------------------ General ----------------- */
 :root {
     --gap: 30px;
+    --lk-control-bg: linear-gradient(109deg, #4367FF 1.57%, #913DFD 100%) !important;
 }
 /* ------------------ Layout ------------------ */
 $container-max-width: 100%;
