chore(other): :shrug: fix Webpack Config

--- a/config/templates/index.development.image-loading.html
+++ b/config/templates/index.development.image-loading.html
@@ -8,9 +8,10 @@
     GDSC MEET
   </title>
 </head>
-
 <body>
-  <div id="root"></div>
+  <div id="root">
+    Loading Webpack
+  </div>
 </body>
 
 </html>
