reponsive signUp page

--- a/src/index.css
+++ b/src/index.css
@@ -131,3 +131,19 @@ table {
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+/* custom material */
+
+.Input::before {
+	border-color: #d1d1d6 !important;
+}
+
+@media (prefers-color-scheme: dark) {
+	.Input::before {
+		border-color: rgba(
+			95,
+			99,
+			104,
+			1
+		) !important; /* Thay đổi màu sắc cho chế độ tối */
+	}
+}
