--- a/config/templates/index.development.image-loading.html
+++ b/config/templates/index.development.image-loading.html
@@ -4,9 +4,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no" />
-  <title>
-    GDSC MEET
-  </title>
+  <title><%= htmlWebpackPlugin.options.title %></title>
 </head>
 <body>
   <div id="root">
