--- a/src/index.css
+++ b/src/index.css
@@ -140,6 +140,37 @@ table {
 			99,
 			104,
 			1
-		) !important; /* Thay đổi màu sắc cho chế độ tối */
+		) !important;
+	}
+}
+
+
+/* Works on Firefox */
+* {
+	scrollbar-width: thin;
+	scrollbar-color: #5f54e5;
+}
+
+/* For desktop browsers (Chrome, Edge, Safari) */
+*::-webkit-scrollbar {
+	width: 8px;
+}
+
+*::-webkit-scrollbar-track {
+}
+
+*::-webkit-scrollbar-thumb {
+	background-color: #5f54e5;
+	border-radius: 20px;
+}
+
+/* For mobile devices (width <= 600px, you can adjust this breakpoint) */
+@media only screen and (max-width: 600px) {
+	*::-webkit-scrollbar {
+		width: 0;
+	}
+
+	*::-webkit-scrollbar-thumb {
+		background-color: transparent;
 	}
 }
